Add GitHub fork banner

--- a/public/host-iframe.html
+++ b/public/host-iframe.html
@@ -1,82 +1,9 @@
-<style>
-  html, body {
-    margin: 15px 20px 20px 20px;
-    font-size: 17px;
-    font-family: 'Helvetica';
-  }
+<title>Web Kitchen</title>
+<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css>
+<link rel=icon type=image/png href=favicon.png>
+<link rel=stylesheet href=main.css>
 
-  noscript > h1 {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    border: 2px solid green;
-    padding: 10px;
-    font-family: andale mono;
-    color: red;
-    font-style: italic;
-    transform: translate(-50%);
-    filter: drop-shadow(5px 5px 4px rgba(256, 0, 0, .6));
-    background: white;
-  }
-
-  /* From: https://www.w3schools.com/howto/howto_css_two_columns.asp */
-  .column {
-    float: left;
-    width: 50%;
-    box-sizing: border-box;
-    padding: 10px 15px;
-  }
-  .column:first-of-type {
-    border-right: 2px solid #818181;
-  }
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  .row {
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 30px;
-  }
-
-  @media (max-width: 1250px) {
-    .row {
-      width: 100%;
-    }
-  }
-
-  /* From: https://stackoverflow.com/questions/270612/ */
-  .scroller {
-    overflow: auto;
-    height: 100px;
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  .scroller .scroller-content .item {
-    height: 20px;
-    transform: translateZ(0); /* fixes a bug in Safari iOS where the scroller doesn't update */
-  }
-
-  table {
-    width: 100%;
-  }
-  table, th, td {
-    border: 1px solid;
-  }
-  th, td {
-    padding: 5px;
-  }
-  td {
-    font-family: monospace;
-    font-size: 16px;
-  }
-
-  button {
-    padding: 7px;
-    margin: 1px;
-  }
-</style>
+<a class="github-fork-ribbon right-top fixed" href="https://github.com/domfarolino/web-kitchen" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 <h1 style='margin-bottom: 5px;'>
   Host an iframe
