--- a/public/host-iframe.html
+++ b/public/host-iframe.html
@@ -46,6 +46,7 @@
     <button onclick="src.value = '/host-iframe.html'; navigate()">Load same-origin iframe</button>
     <button onclick="loadCrossOriginHostIframe()">Load cross-origin iframe</button>
     <button onclick="src.value = 'https://example.com/'; navigate()">Load example.com</button>
+    <button onclick="src.value = 'about:blank'; navigate()">Load about:blank</button>
     <button onclick="src.value='https://subframe.glitch.me/navigate-after-two-seconds.html';navigate()">Load a subframe with onbeforeunload handler</button>
     <input type=checkbox id=frameCoopCoep name=frameCoopCoep>
     <label for=frameCoopCoep>Request <code>CORP/COEP</code></label>
