Add `Load about:blank` button to `host-fenced-frame.html`

--- a/public/host-fenced-frame.html
+++ b/public/host-fenced-frame.html
@@ -46,6 +46,7 @@
     <button onclick="src.value = '/host-fenced-frame.html'; navigate()">Load same-origin fencedframe</button>
     <button onclick="loadCrossOriginHostFencedframe()">Load cross-origin fencedframe</button>
     <button onclick="src.value = 'https://example.com/'; navigate()">Load example.com</button>
+    <button onclick="src.value = 'about:blank'; navigate()">Load about:blank</button>
     <button onclick="src.value='https://subframe.glitch.me/navigate-after-two-seconds.html';navigate()">Load a subframe with onbeforeunload handler</button>
     <input type=checkbox id=frameCoopCoep name=frameCoopCoep>
     <label for=frameCoopCoep>Request <code>CORP/COEP</code></label>
